A new version of My Tester is out. Deprecations triggered in a test method are now reported as warnings.

For complete list of changes since previous version, see CHANGELOG.md.