@@ -1,3 +1,5 @@
 A new version of My Tester is out. Deprecations triggered in a test method are now reported as warnings.
 
+Method ConsoleColors::color can now also set background color.
+
 For complete list of changes since previous version, see CHANGELOG.md.
